--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -19,7 +19,8 @@
 <body>
 
   <div class="waiting_room">
-    <h1>Hi! I'm HOMMY and I will be your game master!</h1>
+    <h1>Hi! I'm
+        <img src="{{ url_for('static', filename='img/hommy_logo.png') }}" alt="HOMMY" id="logo_lobby">OMMY  and I will be your game master!</h1>
     <div class="row waiting_room_form">
       <div class="col-md-5">
           <img src="{{ url_for('static', filename='img/wifi.png') }}" alt="WiFi" id="wifi">
