--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -25,6 +25,21 @@
             android:textColor="#fff"
             android:textSize="40sp"
             android:textStyle="bold" />
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/settings_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="10dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/settings" />
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 
     <LinearLayout
@@ -32,18 +47,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="47dp"
+        android:layout_marginBottom="42dp"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/join_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="15dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button"
-            android:paddingBottom="30dp"
-            android:paddingTop="30dp"
+            android:paddingBottom="25dp"
+            android:paddingTop="25dp"
             android:text="@string/join"
             android:textColor="#fff" />
 
@@ -51,11 +66,11 @@
             android:id="@+id/profile_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="15dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button"
-            android:paddingBottom="30dp"
-            android:paddingTop="30dp"
+            android:paddingBottom="25dp"
+            android:paddingTop="25dp"
             android:text="@string/profile"
             android:textColor="#fff" />
 
@@ -63,9 +78,11 @@
             android:id="@+id/ranking_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="15dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button"
+            android:paddingBottom="25dp"
+            android:paddingTop="25dp"
             android:text="@string/ranking"
             android:textColor="#fff" />
 
@@ -80,11 +97,6 @@
             android:text="@string/logout"
             android:textColor="#fff" />
 
-        <Button
-            android:id="@+id/show_token"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Token" />
     </LinearLayout>
 
 </RelativeLayout>
