--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -203,7 +203,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/profile_back_button"
+            android:id="@+id/ranking_back_button"
             android:layout_width="219dp"
             android:layout_height="64dp"
             android:layout_marginEnd="0dp"
