--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -67,6 +67,7 @@
         android:text="@string/dancestop"
         android:textColor="#fff"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/list3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list2" />
@@ -89,6 +90,7 @@
         android:text="@string/musictrivia"
         android:textColor="#fff"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/list4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list3" />
