--- a/app/src/main/res/layout/activity_dance_stop_challenge.xml
+++ b/app/src/main/res/layout/activity_dance_stop_challenge.xml
@@ -37,7 +37,7 @@
         app:srcCompat="@drawable/dance" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/dance_rules"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="20dp"
@@ -46,11 +46,26 @@
         android:textAlignment="center"
         android:textColor="#fff"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/eliminationdance"
+        app:layout_constraintBottom_toTopOf="@+id/dancetest"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+    <TextView
+        android:id="@+id/dancetest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/eliminationdance"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dance_rules" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/eliminationdance"
@@ -60,14 +75,13 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:cardBackgroundColor="@color/red_recording"
         app:cardCornerRadius="25dp"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintTop_toBottomOf="@+id/dancetest">
 
         <RelativeLayout
             android:layout_width="match_parent"
